--- a/package.json
+++ b/package.json
@@ -10,7 +10,9 @@
     "debug": "~2.6.9",
     "express": "~4.16.0",
     "http-errors": "~1.6.2",
+    "mime-types": "^2.1.24",
     "morgan": "~1.9.0",
+    "multer": "^1.4.1",
     "pug": "2.0.0-beta11"
   }
 }
