--- a/package.json
+++ b/package.json
@@ -13,6 +13,6 @@
     "mime-types": "^2.1.24",
     "morgan": "~1.9.0",
     "multer": "^1.4.1",
-    "pug": "2.0.0-beta11"
+    "pug": "^2.0.4"
   }
 }
